tests/script_runtime_errors/recursion_limit/error.txt
Error: 
    4 | end;
    5 | 
    6 | boom(1)
      | ^^^^^^^ Recursion limit Reached